# subspace_equivalence

./: algorithm_3.py  compute_sdt_with_partitions.py  generate_subspaces.py  pyproject.toml  readme.md  spn_simple.cpp  subspace_utils.py
compute_sdu/: __init__.py  compute_SDU.py  init.py  subspace_utils.py
