[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compute-sdu"
version = "0.1.0"
description = "Compute the extent to which an s-box diffuses differences."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.24",
  "numba>=0.59",
]

[tool.setuptools.packages.find]
where = ["."]